tests/NormalTests/paczka1/fuzzy1/59170605.err
Error in line 6: 3Lyelr2q1i S594 89,3
Error in line 25: 3Lyelr2q1i A304 59,2
Error in line 32: kse7By S679 12,7
